--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
     .section{padding:6px 22px 20px}
     .section h2{font-size:26px;line-height:1.2;margin:18px 0 8px;font-weight:900;text-align:center}
     .section p{margin:8px auto 10px;max-width:70ch;text-align:center}
-    .pill{display:inline-block;background:#eef2ff;color:#0b3cff;padding:6px 10px;border-radius:999px;font-weight:700;font-size:12px;letter-spacing:.3px;margin-bottom:6px}
-    .center{display:block;margin:10px auto;max-width:240px;width:70%}
-    .right{float:right;margin:0 0 10px 14px;max-width:120px;width:30%}
+    .center{display:block;margin:18px auto;max-width:150px;width:45%} /* smaller WeAre26 image */
+    .whatwedo-wrapper{display:flex;flex-direction:column;align-items:center;text-align:left}
+    .whatwedo-list{max-width:70ch;margin:0 auto}
+    .trophy{margin:18px auto 0;max-width:140px;width:40%;display:block} /* centered trophy */
     ul{margin:8px auto 8px;max-width:70ch;text-align:left;padding-left:20px}
     li{margin:7px 0}
-    .closer{font-weight:800;margin:14px auto 0;max-width:72ch;text-align:center}
-    footer.note{font-size:12px;color:#7a8697;text-align:center;padding:16px 10px}
-    .gap{height:8px}
+    .closer{font-weight:800;margin:36px auto 0;max-width:72ch;text-align:center} /* more spacing before closer */
     .wrap{margin:16px auto;border-left:1px solid var(--border);border-right:1px solid var(--border)}
-    .clearfix::after{content:'';display:block;clear:both}
     @media (min-width:880px){
       h1{font-size:40px}
       .section h2{font-size:28px}
@@ -52,7 +50,6 @@
 
       <!-- Hero -->
       <div class="hero">
-        <span class="pill">FIFA World Cup™ Operations</span>
         <h1>Arrivals & Departures</h1>
         <p class="subtitle">Ensuring smooth travels during the FIFA World Cup</p>
       </div>
@@ -71,15 +68,17 @@
       </section>
 
       <!-- What We Do -->
-      <section class="section clearfix">
+      <section class="section">
         <h2>What We Do</h2>
-        <img class="right" src="trophy-badge.png" alt="FIFA trophy badge">
-        <ul>
-          <li>Coordinate with airports, railways, and government agencies</li>
-          <li>Manage arrivals & departures for all FIFA client groups</li>
-          <li>Design clear flows: signage, dedicated lanes, staffing areas</li>
-          <li>Run 24/7 operations and readiness for peak travel days</li>
-        </ul>
+        <div class="whatwedo-wrapper">
+          <ul class="whatwedo-list">
+            <li>Coordinate with airports, railways, and government agencies</li>
+            <li>Manage arrivals & departures for all FIFA client groups</li>
+            <li>Design clear flows: signage, dedicated lanes, staffing areas</li>
+            <li>Run 24/7 operations and readiness for peak travel days</li>
+          </ul>
+          <img class="trophy" src="trophy-badge.png" alt="FIFA trophy badge">
+        </div>
       </section>
 
       <!-- Our Mission -->
@@ -96,9 +95,7 @@
 
       <!-- Bottom decorative border image -->
       <img class="footer-img" src="bottom-border.png" alt="Decorative bottom border">
-
     </div>
-    <footer class="note">Part of FIFA World Cup 2026™ Operations — Arrivals & Departures (AND)</footer>
   </div>
 </body>
 </html>
