--- a/index_v2.html
+++ b/index_v2.html
@@ -1,20 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Arrivals & Departures (AND)</title>
-  <meta name="description" content="AND keeps travel smooth for players, officials, media, and fans across World Cup host cities — airport/train to hotel or stadium." />
+  <meta name="description" content="AND keeps travel smooth for players, officials, media, and fans across World Cup host cities – airports and stadiums working together.">
   <style>
     :root{
       --ink:#0b1220;
       --muted:#5b6675;
       --border:#e6e8ef;
-      --accent:#0b5cff;
+      --accent:#005cff;
       --card:#ffffff;
       --bg:#f7f8fb;
       --radius:18px;
-      --shadow:0 10px 30px rgba(20,40,80,.06);
+      --shadow:0 10px 30px rgba(20,40,60,.06);
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.6}
@@ -22,79 +22,66 @@
     .container{max-width:860px;margin:0 auto;padding:0 14px}
     .sheet{background:var(--card);border:1px solid var(--border);box-shadow:var(--shadow)}
     .header-img,.footer-img{width:100%;display:block}
-    .hero{padding:18px 16px 8px;text-align:center}
-    h1{font-size:34px;line-height:1.15;margin:10px 0 4px;font-weight:900}
+    .hero{padding:18px 16px 28px;text-align:center}
+    h1{font-size:34px;line-height:115%;margin:12px 0 4px;font-weight:900}
     .subtitle{font-size:18px;font-weight:700;margin:0 0 8px}
-    .section{padding:6px 22px 20px}
-    .section h2{font-size:26px;line-height:1.2;margin:18px 0 8px;font-weight:900;text-align:center}
-    .section p{margin:8px auto 10px;max-width:70ch;text-align:center}
-    .center{display:block;margin:18px auto;max-width:150px;width:45%} /* smaller WeAre26 image */
-    .whatwedo-wrapper{display:flex;flex-direction:column;align-items:center;text-align:left}
-    .whatwedo-list{max-width:70ch;margin:0 auto}
-    .trophy{margin:18px auto 0;max-width:140px;width:40%;display:block} /* centered trophy */
-    ul{margin:8px auto 8px;max-width:70ch;text-align:left;padding-left:20px}
-    li{margin:7px 0}
-    .closer{font-weight:800;margin:36px auto 0;max-width:72ch;text-align:center} /* more spacing before closer */
-    .wrap{margin:16px auto;border-left:1px solid var(--border);border-right:1px solid var(--border)}
-    @media (min-width:880px){
-      h1{font-size:40px}
-      .section h2{font-size:28px}
-    }
+    section{padding:28px 22px;text-align:center}
+    h2{font-size:22px;margin:0 0 12px;font-weight:800}
+    p{margin:0 auto 16px;max-width:680px}
+    ul{margin:0 auto 20px;text-align:left;max-width:640px}
+    ul li{margin:6px 0}
+    .weare26{max-width:240px;margin:28px auto}
+    .trophy{max-width:200px;display:block;margin:20px auto}
+    .mission-list{list-style: disc;text-align:center;padding-left:0;margin:0 auto 50px;display:inline-block}
+    .mission-list li{margin:10px 0}
+    .tagline{margin-top:40px;font-weight:700;text-align:center}
+    footer{font-size:13px;color:var(--muted);padding:16px;text-align:center}
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="wrap sheet">
-      <!-- Top decorative border image -->
-      <img class="header-img" src="top-border.png" alt="Decorative top border">
+    <div class="sheet">
+      <img src="top-border.png" alt="Top border" class="header-img">
 
-      <!-- Hero -->
       <div class="hero">
         <h1>Arrivals & Departures</h1>
         <p class="subtitle">Ensuring smooth travels during the FIFA World Cup</p>
       </div>
 
-      <!-- What is AND -->
-      <section class="section">
+      <section>
         <h2>What is AND?</h2>
         <p>Arrivals & Departures (AND) is the team that makes sure every FIFA client group — from teams and referees to VIPs and fans — moves from the airport or train station to hotels and stadiums smoothly and safely. We operate across the U.S., Mexico, and Canada to create a seamless journey during the FIFA World Cup.</p>
-        <img class="center" src="weare26.png" alt="We Are 26 graphic">
+        <img src="weare26.png" alt="We Are 26 Logo" class="weare26">
       </section>
 
-      <!-- Why It Matters -->
-      <section class="section">
+      <section>
         <h2>Why It Matters</h2>
         <p>Airports and railways are busy. During the World Cup, the numbers surge. AND integrates with airport and station operations so that, even on peak days, guests move efficiently — fans focus on football and teams focus on the match.</p>
       </section>
 
-      <!-- What We Do -->
-      <section class="section">
+      <section>
         <h2>What We Do</h2>
-        <div class="whatwedo-wrapper">
-          <ul class="whatwedo-list">
-            <li>Coordinate with airports, railways, and government agencies</li>
-            <li>Manage arrivals & departures for all FIFA client groups</li>
-            <li>Design clear flows: signage, dedicated lanes, staffing areas</li>
-            <li>Run 24/7 operations and readiness for peak travel days</li>
-          </ul>
-          <img class="trophy" src="trophy-badge.png" alt="FIFA trophy badge">
-        </div>
+        <ul>
+          <li>Coordinate with airports, railways, and government agencies</li>
+          <li>Manage arrivals & departures for all FIFA client groups</li>
+          <li>Design clear flows: signage, dedicated lanes, staffing areas</li>
+          <li>Run 24/7 operations and readiness for peak travel days</li>
+        </ul>
+        <img src="trophy-badge.png" alt="FIFA Trophy Badge" class="trophy">
       </section>
 
-      <!-- Our Mission -->
-      <section class="section">
+      <section>
         <h2>Our Mission</h2>
-        <ul>
+        <ul class="mission-list">
           <li>Provide safe, reliable, and efficient travel services</li>
           <li>Support operators with increased tournament traffic</li>
           <li>Connect arrivals to hotels and stadiums across host cities</li>
         </ul>
-        <p class="closer">From touchdown to kick‑off, AND connects the world of football to the heart of the tournament.</p>
-        <p class="section" style="padding-top:0;text-align:center">Learn more: <a href="https://www.fifa.com" target="_blank" rel="noopener">FIFAWorldCup.com</a></p>
+        <p class="tagline">From touchdown to kick-off, AND connects the world of football to the heart of the tournament.</p>
+        <p>Learn more: <a href="https://FIFAWorldCup.com">FIFAWorldCup.com</a></p>
       </section>
 
-      <!-- Bottom decorative border image -->
-      <img class="footer-img" src="bottom-border.png" alt="Decorative bottom border">
+      <img src="bottom-border.png" alt="Bottom border" class="footer-img">
     </div>
   </div>
 </body>
