--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Arrivals & Departures (AND)</title>
-  <meta name="description" content="AND keeps travel smooth for players, officials, media, and fans across World Cup host cities – airports and railways.">
+  <meta name="description" content="AND keeps travel smooth for players, officials, media, and fans across World Cup host cities – airports.">
   <style>
     :root {
       --ink: #0b1220;
@@ -82,7 +82,7 @@
       <div class="section">
         <h2>What is AND?</h2>
         <p>
-          Arrivals & Departures (AND) is the team that makes sure every FIFA client group — from teams and referees to VIPs and fans — moves from the airport or train station to hotels and stadiums smoothly and safely. We operate across the U.S., Mexico, and Canada to create a seamless journey during the FIFA World Cup.
+          Arrivals & Departures (AND) is the team that makes sure every FIFA client group — from teams and referees to VIPs and fans — moves from the airport to hotels and stadiums smoothly and safely. We operate across the U.S., Mexico, and Canada to create a seamless journey during the FIFA World Cup.
         </p>
         <img src="weare26.png" alt="We Are 26" class="smaller" />
       </div>
@@ -90,14 +90,14 @@
       <div class="section">
         <h2>Why It Matters</h2>
         <p>
-          Airports and railways are busy. During the World Cup, the numbers surge. AND integrates with airport and station operations so that, even on peak days, guests move efficiently — fans focus on football and teams focus on the match.
+          Airports are busy. During the World Cup, the numbers surge. AND integrates with airport operations so that, even on peak days, guests move efficiently — fans focus on football and teams focus on the match.
         </p>
       </div>
 
       <div class="section">
         <h2>What We Do</h2>
         <ul>
-          <li>Coordinate with airports, railways, and government agencies</li>
+          <li>Coordinate with airport stakeholders</li>
           <li>Manage arrivals & departures for all FIFA client groups</li>
           <li>Design clear flows: signage, dedicated lanes, staffing areas</li>
           <li>Run 24/7 operations and readiness for peak travel days</li>
