--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 
       <section>
         <h2>What is AND?</h2>
-        <p>Arrivals & Departures (AND) is the team that makes sure every FIFA client group — from teams and referees to VIPs and fans — moves from the airport or train station to hotels and stadiums smoothly and safely. We operate across the U.S., Mexico, and Canada to create a seamless journey during the FIFA World Cup.</p>
+        <p>Arrivals & Departures (AND) is the team that makes sure every FIFA client group — from teams and referees to VIPs and fans — moves from the airport to hotels and stadiums smoothly and safely. We operate across the U.S., Mexico, and Canada to create a seamless journey during the FIFA World Cup.</p>
         <img class="weare26" src="weare26.png" alt="We Are 26">
       </section>
 
       <section>
         <h2>Why It Matters</h2>
-        <p>Airports and railways are busy. During the World Cup, the numbers surge. AND integrates with airport and station operations so that, even on peak days, guests move efficiently — fans focus on football and teams focus on the match.</p>
+        <p>Airports are busy. During the World Cup, the numbers surge. AND integrates with airport operations so that, even on peak days, guests move efficiently — fans focus on football and teams focus on the match.</p>
       </section>
 
       <section>
